--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,44 +1,47 @@
 <div class="container">
  
-     <div class="navbar">
+     {{!-- <div class="navbar" style="position: fixed;">
 
          <img src="/images/469a24b8-3d81-4c84-84f8-8a89c7711a53_200x200.png" class="logo">
-     </div>
+     </div> --}}
 
 <div class="row">
-    <div class="col">
+    <div class="col content">
         <h1>Welcome to the language Learning App</h1>
         <br>
         <p>You are in the right place to learn 11 official South African Languages</p>
         <button type="button">Learn more languages</button>
     </div>
-    
     <div class="col">
+        {{!-- <div class="username">
+            <label for="">
+                <input name="name" placeholder="Please Enter Your Name" type="text">
+            </label>
+        </div> --}}
         <div class="card card1">
-            <a href="#">
+            <a href="/sesotho">
                 <h5>Sotho</h5>
-            <p>In this simulation you will learn the basics in this language</p>
+            {{!-- <p>In this simulation you will learn the basics in this language</p> --}}
             </a>
         </div>
         <div class="card card2">
-            <a href="#">
-                
+            <a href="/venda">
                 <h5>Venda</h5>
-            <p>In this simulation you will learn the basics in this language</p>
+            {{!-- <p>In this simulation you will learn the basics in this language</p> --}}
             </a>
         </div>
         <br>
         <div class="card card3">
-            <a href="#">
+            <a href="/isixhosa">
                 <h5>Xhosa</h5>
-            <p>In this simulation you will learn the basics in this language</p>
+            {{!-- <p>In this simulation you will learn the basics in this language</p> --}}
             </a>
         </div>
 
         <div class="card card4">
-            <a href="#">
+            <a href="/zulu">
                 <h5>Zulu</h5>
-            <p>In this simulation you will learn the basics in this language</p>
+            {{!-- <p>In this simulation you will learn the basics in this language</p> --}}
             </a>
         </div>
     </div>
