--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,10 @@
-* {
+.red {
+	color: red;
+}
+.green {
+	color: green;
+}
+/* * {
 	margin: 0px;
 	padding: 0px;
 	font-family: 'Roboto', sans-serif;
@@ -45,6 +51,7 @@ button {
 	border-radius: 20px;
 	outline: none;
 	margin-top: 30px;
+	cursor: pointer;
 }
 
 .card {
@@ -96,4 +103,4 @@ h5 {
 
 a {
 	color: black;
-}
+} */
