--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,130 @@
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <style>
+        * {
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Roboto', sans-serif;
+	text-align: center;
+}
+
+.container {
+	width: 100%;
+	height: 100vh;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/theBackground.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+.row {
+	display: flex;
+	height: 88%;
+	align-items: center;
+	color: white;
+}
+
+.col {
+	flex-basis: 50%;
+}
+
+h1 {
+	color: white;
+	font-size: 50px;
+}
+
+p {
+	color: white;
+	font-size: 25px;
+	line-height: 15px;
+}
+
+button {
+	width: 180px;
+	color: #000;
+	font-size: 12px;
+	padding: 12px 0;
+	background: white;
+	border: 0px;
+	border-radius: 20px;
+	outline: none;
+	margin-top: 30px;
+	cursor: pointer;
+}
+
+.card {
+	width: 250px;
+	height: 300px;
+	display: inline-block;
+	border-radius: 10px;
+	padding: 25px 35px;
+	box-sizing: border-box;
+	cursor: pointer;
+	margin: 20px 35px;
+	background-position: center;
+	background-size: cover;
+	transition: transform 0.8s;
+}
+
+.card1 {
+	background-image: url(/images/SothoLogo.jpg);
+}
+
+.card2 {
+	background-image: url(/images/Venda\ Logo.jpg);
+}
+
+.card3 {
+	background-image: url(/images/XhosaLogo.jpg);
+}
+
+.card4 {
+	background-image: url(/images/ZulLogo.jpg);
+}
+
+.card:hover {
+	transform: translateY(-15px);
+}
+
+h5 {
+	color: black;
+	text-shadow: 0 0 5px #999;
+	font-size: 20px;
+}
+
+.card p {
+	color: rgb(0, 0, 0);
+	text-shadow: 0 0 15px #999;
+	font-size: 12px;
+	font-weight: bolder;
+}
+
+a {
+	color: black;
+}
+    </style>
+</head>
+<body>
+    <div class="container">
  
      {{!-- <div class="navbar" style="position: fixed;">
 
          <img src="/images/469a24b8-3d81-4c84-84f8-8a89c7711a53_200x200.png" class="logo">
      </div> --}}
+     
 
 <div class="row">
     <div class="col content">
         <h1>Welcome to the language Learning App</h1>
         <br>
         <p>You are in the right place to learn 11 official South African Languages</p>
-        <button type="button">Learn more languages</button>
+        <form action="/languages" method="get">
+            <button type="submit">Play</button>
+        </form>
     </div>
     <div class="col">
         {{!-- <div class="username">
@@ -48,3 +162,6 @@
 </div>
 </div>
 
+
+</body>
+</html>
