--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -1,6 +1,6 @@
-<div class="content" style="color: black;">
+<div class="model" style="color: black;">
 
-    <div class="level levelOne hidden">
+    <div class="level levelOne ">
         <h2>Level One</h2>
         <p>Hello, please listen to the audios below before you start with level one!</p>
         <div class="audio">
@@ -41,9 +41,10 @@
                 <audio src="/audio/Who.m4a" controls type="audio/m4a">Venda</audio>
             </label>
         </div>
+        <div>
+            <span class="counter"></span>
+        </div>
     </div>
-
-    <br><br><br>
 
     <div class="level levelThree hidden">
         <h2>Level Three</h2>
@@ -63,13 +64,16 @@
                 <audio src="/audio/Vhavhe.m4a" controls type="audio/m4a">Venda</audio>
             </label>
         </div>
+        <div>
+            <span class="counter"></span>
+        </div>
     </div>
         <div class="level levelFour hidden">
             <h1>you are done!</h1>
         </div>
 
+    
     <div>Model response</div>
-
     <button type="button" onclick="init()">Start</button>
 
     <div id="label-container">
