--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,66 @@
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'Lato', Helvetica, sans-serif;
+	font-size: 20px;
+}
 .audio {
 	display: flex;
 }
 .hidden {
 	display: none;
+}
+.model {
+	width: 60%;
+	/* border: 2px solid red; */
+	margin: 0 auto;
+}
+.model h2 {
+	font-weight: lighter;
+	font-size: 36px;
+}
+.model h3 {
+	font-weight: lighter;
+	font-size: 20px;
+}
+.model .audio {
+	/* border: 1px solid blue; */
+	width: fit-content;
+	margin: 0 auto;
+}
+.model .audio label {
+	margin: 0 1em;
+}
+.model .counter {
+	text-align: center;
+	background-color: #000;
+	padding: 10px;
+	color: #fff;
+	display: block;
+	width: 50px;
+	border-radius: 15px;
+	margin: 1em auto;
+	font-size: 25px;
+}
+.model .buttons {
+	/* border: 2px solid green; */
+	margin: 0 auto;
+}
+.model .buttons button {
+	padding: 10px 50px;
+	margin: 1em 0;
+	border: none;
+	border-radius: 5px;
+	background-color: black;
+	color: white;
+	cursor: pointer;
+	transition: 0.8s;
+	border: 1px solid #000;
+	/* transition: transform 500ms ease-in-out 25ms; */
+}
+.model .buttons button:hover {
+	background-color: #fff;
+	color: #000;
+	border: 1px solid #000;
+	/* transform: translateX(0px) translateY(75px); */
 }
