--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,9 @@ body {
 	font-family: 'Lato', Helvetica, sans-serif;
 	font-size: 20px;
 }
+audio {
+	outline: none;
+}
 .audio {
 	display: flex;
 }
@@ -21,6 +24,7 @@ body {
 }
 .model h3 {
 	font-weight: lighter;
+	font-style: italic;
 	font-size: 20px;
 }
 .model .audio {
@@ -56,6 +60,7 @@ body {
 	cursor: pointer;
 	transition: 0.8s;
 	border: 1px solid #000;
+	outline: none;
 	/* transition: transform 500ms ease-in-out 25ms; */
 }
 .model .buttons button:hover {
