--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Lato', Helvetica, sans-serif;
+	font-family: "Montserrat","Helvetica Neue",Arial,sans-serif;
 	font-size: 20px;
 }
 audio {
