--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -19,6 +19,7 @@
         </div>
         <div>
             <span class="counter">0</span>
+            <h3 class="error" style="font-style: normal; color:crimson;"></h3>
         </div>
     </div>
 
@@ -29,7 +30,7 @@
 
         <div class="audio">
             <label for="">
-                <h3>Sesotho - Le Kae</h3>
+                <h3>Sesotho - Le Kae?</h3>
                 <audio src="/audio/Lekae.m4a" controls>Sesotho</audio>
             </label>
             <label for="">
@@ -37,7 +38,7 @@
                 <audio src="/audio/Unjani.m4a" controls type="audio/m4a">IsiXhosa</audio>
             </label>
             <label for="">
-                <h3>Venda - Who Vuwa</h3>
+                <h3>Venda - Vho Vuwa hani</h3>
                 <audio src="/audio/Who.m4a" controls type="audio/m4a">Venda</audio>
             </label>
         </div>
@@ -52,7 +53,7 @@
 
         <div class="audio">
             <label for="">
-                <h3>Sesotho - Letsatsi le monate</h3>
+                <h3>Sesotho - Eba Letsatsi le monate</h3>
                 <audio src="/audio/Letsatsi.m4a" controls>Sesotho</audio>
             </label>
             <label for="">
@@ -60,7 +61,7 @@
                 <audio src="/audio/emnandi.m4a" controls type="audio/m4a">IsiXhosa</audio>
             </label>
             <label for="">
-                <h3>Venda - Vhavhe</h3>
+                <h3>Venda - Vha vhe de lavhundi</h3>
                 <audio src="/audio/Vhavhe.m4a" controls type="audio/m4a">Venda</audio>
             </label>
         </div>
@@ -69,7 +70,7 @@
         </div>
     </div>
     <div class="level levelFour hidden">
-        <h1>you are done!</h1>
+        <h1>Well Done! Completed!</h1>
     </div>
 
 
