--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -19,7 +19,7 @@
         </div>
         <div>
             <span class="counter">0</span>
-            <h3 class="error" style="font-style: normal; color:crimson;"></h3>
+            <h3 class="error success" style="font-style: normal; color:crimson;"></h3>
         </div>
     </div>
 
@@ -44,6 +44,7 @@
         </div>
         <div>
             <span class="counter">0</span>
+             <h3 class="error" style="font-style: normal; color:crimson;"></h3>
         </div>
     </div>
 
@@ -67,6 +68,7 @@
         </div>
         <div>
             <span class="counter">0</span>
+             <h3 class="error" style="font-style: normal; color:crimson;"></h3>
         </div>
     </div>
     <div class="level levelFour hidden">
