--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,23 +4,30 @@ body {
 	padding: 0;
 	font-family: "Montserrat","Helvetica Neue",Arial,sans-serif;
 	font-size: 20px;
+	background-color: #146987;
+	color: #fff;
 }
 audio {
 	outline: none;
 }
 .audio {
 	display: flex;
+	font-size: small;
 }
 .hidden {
 	display: none;
 }
+.hideOnElevelFour {
+	display: none;
+}
 .model {
 	width: 60%;
-	/* border: 2px solid red; */
-	margin: 0 auto;
+	margin: 5em auto;
+	background-color: #003c57;
+	border-radius: 30px;
+	padding: 50px;
 }
 .model h2 {
-	font-weight: lighter;
 	font-size: 36px;
 }
 .model h3 {
@@ -38,9 +45,10 @@ audio {
 }
 .model .counter {
 	text-align: center;
-	background-color: #000;
+	background-color: #00c2ff;
 	padding: 10px;
-	color: #fff;
+	color: #003c57;
+	font-weight: bold;
 	display: block;
 	width: 50px;
 	border-radius: 15px;
@@ -51,22 +59,22 @@ audio {
 	/* border: 2px solid green; */
 	margin: 0 auto;
 }
-.model .buttons button {
+/* TO DO --- HIDE BUTTON ON 4TH STAGE */
+.model .buttons button, .levelFour button {
 	padding: 10px 50px;
 	margin: 1em 0;
 	border: none;
 	border-radius: 5px;
-	background-color: black;
-	color: white;
+	background-color: #00c2ff;
+	font-size: 16px;
+	color: #003c57;
 	cursor: pointer;
-	transition: 0.8s;
-	border: 1px solid #000;
+	transition: 0.6s;
+	border: 1px solid #003c57;
 	outline: none;
-	/* transition: transform 500ms ease-in-out 25ms; */
 }
 .model .buttons button:hover {
-	background-color: #fff;
-	color: #000;
-	border: 1px solid #000;
-	/* transform: translateX(0px) translateY(75px); */
+	background-color: #75d7f5;
+	color: #003c57;
+	border: 1px solid #003c57;
 }
