--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -81,11 +81,13 @@
 
     <div class="buttons">
         {{!-- <div>Model Response</div> --}}
-        <button type="button" onclick="init()" style="display: inline-block; margin: 0 2em 0 0">Start</button>
-        <button class="nextBtn">Next</button>
+        <div class="">
+            <button type="button" onclick="init()" style="display: inline-block; margin: 0 2em 0 0">Start</button>
+            <button class="nextBtn">Next</button>
+        </div>
 
         {{!-- TO DO --- HIDE BUTTON ON 4TH STAGE --}}
-        <div class="hideOnElevelFour" id="label-container">
+        <div id="label-container">
 
         </div>
 
