--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -68,7 +68,7 @@
         </div>
         <div>
             <span class="counter">0</span>
-             <h3 class="error" style="font-style: normal; color:crimson;"></h3>
+             <h3 class="error" style="font-style: normal; color:crimson; font-weight:bold;"></h3>
         </div>
     </div>
     <div class="level levelFour hidden">
@@ -82,8 +82,8 @@
     <div class="buttons">
         {{!-- <div>Model Response</div> --}}
         <div class="">
-            <button type="button" onclick="init()" style="display: inline-block; margin: 0 2em 0 0">Start</button>
-            <button class="nextBtn">Next</button>
+            <button class="hideBtn" type="button" onclick="init()" style="display: inline-block; margin: 0 2em 0 0">Start</button>
+            <button class="nextBtn hideBtn">Next</button>
         </div>
 
         {{!-- TO DO --- HIDE BUTTON ON 4TH STAGE --}}
