made app responsive

--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -81,8 +81,8 @@
 
     <div class="buttons">
         {{!-- <div>Model Response</div> --}}
-        <div class="">
-            <button class="hideBtn" type="button" onclick="init()" style="display: inline-block; margin: 0 2em 0 0">Start</button>
+        <div class="navBtns">
+            <button class="hideBtn" type="button" onclick="init()">Start</button>
             <button class="nextBtn hideBtn">Next</button>
         </div>
 
