--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ audio {
 }
 .model .audio {
 	/* border: 1px solid blue; */
-	width: fit-content;
+	width: 100%;
 	margin: 0 auto;
 }
 .model .audio label {
@@ -73,8 +73,29 @@ audio {
 	border: 1px solid #003c57;
 	outline: none;
 }
+.hideBtn { display: inline-block; margin: 0 2em 0 0; }
 .model .buttons button:hover {
 	background-color: #75d7f5;
 	color: #003c57;
 	border: 1px solid #003c57;
+}
+@media only screen and (max-width: 600px) {
+	.audio {
+		display: block;
+		margin: 0 auto;
+		width: 100%;
+		border: 1px solid white;
+	}
+	.model {
+		padding: 0;
+		width: 80%;
+		margin: 0.5em auto;
+		border-radius: 10px;
+		padding: 25px;
+		border: 1px solid yellow;
+	}
+	.level { border: 1px solid red; }
+	.navBtns {
+		display: flex;
+	}
 }
