--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,7 @@
 			padding: 0px;
 			overflow: hidden;
 		}
+
 		body {
 			overflow: hidden;
 			background-image: url("/images/city.png");
@@ -20,8 +21,6 @@
 		}
 
 		.container {
-			width: 100%;
-			height: 100vh;
 			background-color: #14698799;
 		}
 
@@ -57,24 +56,24 @@
 			cursor: pointer;
 			transition: 0.6s;
 		}
+
 		button:hover {
 			background: #044969;
 		}
+
 		nav {
-			position: absolute;
-			top: 0;
 			width: 100%;
-			padding: 25px;
-			display: flex;
-			justify-content: flex-end;
 		}
-		nav h2:first-child{
+
+		nav h2:first-child {
 			margin-right: 28em;
 		}
+
 		nav h2 {
 			font-weight: 900;
 			margin: 0 3em;
 		}
+
 		footer {
 			position: absolute;
 			padding: 20px;
@@ -85,16 +84,47 @@
 			font-style: unset;
 			font-weight: bold;
 		}
+
+		footer p {
+			color: #146987;
+			font-style: normal;
+			font-size: 14px;
+		}
+
+		@media only screen and (max-width: 600px) {
+			* {}
+
+			body {}
+
+			.container {
+				height: 100vh;
+			}
+
+			.content {
+				width: 80%;
+				bottom: unset;
+				margin: 20vh auto;
+			}
+
+			button {
+				padding: 10px 80px;
+				border: 0px;
+				border-radius: 20px;
+				margin-top: 30px;
+			}
+
+			footer p {
+				font-size: 14px;
+			}
+		}
 	</style>
 </head>
 
 <body>
 	<div class="container">
-		<nav>
-			<h2  class="start">learnMine</h2>
-			<h2>something</h2>
-			<h2>something</h2>
-		</nav>
+		{{!-- <nav>
+			<h2 class="start">learnMine</h2>
+		</nav> --}}
 
 		<div class="content">
 			<h1>Learn Mine!</h1>
@@ -104,9 +134,10 @@
 				<button type="submit">Get Started</button>
 			</form>
 		</div>
-	<footer>
-		codeX December &copy; 2020 Hackathon
-	</footer>
+		<footer>
+			<p><a href="www.projectcodex.co" style="color: #83C310;">codeX</a> December &copy; 2020 Hackathon</p>
+			<p>Luyolo | Simthemile | Lilitha | Xhanti</p>
+		</footer>
 	</div>
 
 </body>
