--- a/views/languages.handlebars
+++ b/views/languages.handlebars
@@ -1,104 +1,115 @@
-<div class="model">
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="level levelOne ">
-        <h2>Level One</h2>
-        <p>Hello, please listen to the audios below before you start with level one!</p>
-        <div class="audio">
-            <label for="">
-                <h3>Sesotho - Dumelang</h3>
-                <audio src="/audio/Dumelang.m4a" controls>Sesotho</audio>
-            </label>
-            <label for="">
-                <h3>IsiXhosa - Molo</h3>
-                <audio src="/audio/Molo.m4a" controls type="audio/m4a">IsiXhosa</audio>
-            </label>
-            <label for="">
-                <h3>Venda - Ndaa</h3>
-                <audio src="/audio/Venda.m4a" controls type="audio/m4a">Venda</audio>
-            </label>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="model">
+
+        <div class="level levelOne ">
+            <h2>Level One</h2>
+            <p>Hello, please listen to the audios below before you start with level one!</p>
+            <div class="audio">
+                <label for="">
+                    <h3>Sesotho - Dumelang</h3>
+                    <audio src="/audio/Dumelang.m4a" controls>Sesotho</audio>
+                </label>
+                <label for="">
+                    <h3>IsiXhosa - Molo</h3>
+                    <audio src="/audio/Molo.m4a" controls type="audio/m4a">IsiXhosa</audio>
+                </label>
+                <label for="">
+                    <h3>Venda - Ndaa</h3>
+                    <audio src="/audio/Venda.m4a" controls type="audio/m4a">Venda</audio>
+                </label>
+            </div>
+            <div>
+                <span class="counter">0</span>
+                <h3 class="error success" style="font-style: normal; color:crimson;"></h3>
+            </div>
         </div>
-        <div>
-            <span class="counter">0</span>
-            <h3 class="error success" style="font-style: normal; color:crimson;"></h3>
+
+
+        <div class="level levelTwo hidden">
+            <h2>Level Two</h2>
+            <p>Hello, please listen to the audios below before you start with level two!</p>
+
+            <div class="audio">
+                <label for="">
+                    <h3>Sesotho - Le Kae?</h3>
+                    <audio src="/audio/Lekae.m4a" controls>Sesotho</audio>
+                </label>
+                <label for="">
+                    <h3>IsiXhosa - Unjani</h3>
+                    <audio src="/audio/Unjani.m4a" controls type="audio/m4a">IsiXhosa</audio>
+                </label>
+                <label for="">
+                    <h3>Venda - Vho Vuwa hani</h3>
+                    <audio src="/audio/Who.m4a" controls type="audio/m4a">Venda</audio>
+                </label>
+            </div>
+            <div>
+                <span class="counter">0</span>
+                <h3 class="error" style="font-style: normal; color:crimson;"></h3>
+            </div>
         </div>
+
+        <div class="level levelThree hidden">
+            <h2>Level Three</h2>
+            <p>Hello, please listen to the audios below before you start with level three!</p>
+
+            <div class="audio">
+                <label for="">
+                    <h3>Sesotho - Eba Letsatsi le monate</h3>
+                    <audio src="/audio/Letsatsi.m4a" controls>Sesotho</audio>
+                </label>
+                <label for="">
+                    <h3>IsiXhosa - Ube nemini emnandi</h3>
+                    <audio src="/audio/emnandi.m4a" controls type="audio/m4a">IsiXhosa</audio>
+                </label>
+                <label for="">
+                    <h3>Venda - Vha vhe de lavhundi</h3>
+                    <audio src="/audio/Vhavhe.m4a" controls type="audio/m4a">Venda</audio>
+                </label>
+            </div>
+            <div>
+                <span class="counter">0</span>
+                <h3 class="error" style="font-style: normal; color:crimson; font-weight:bold;"></h3>
+            </div>
+        </div>
+        <div class="level levelFour hidden">
+            <h1>Levels Completed. Well Done!</h1>
+            <form action="/" method="GET">
+                <button type="submit">HOME</button>
+            </form>
+        </div>
+
+
+        <div class="buttons">
+            {{!-- <div>Model Response</div> --}}
+            <div class="navBtns">
+                <button class="hideBtn" type="button" onclick="init()">Start</button>
+                <button class="nextBtn hideBtn">Next</button>
+            </div>
+
+            {{!-- TO DO --- HIDE BUTTON ON 4TH STAGE --}}
+            <div id="label-container">
+
+            </div>
+
+        </div>
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands@0.4.0/dist/speech-commands.min.js"></script>
+        <script src="/checklevels.js"></script>
     </div>
+</body>
 
-
-    <div class="level levelTwo hidden">
-        <h2>Level Two</h2>
-        <p>Hello, please listen to the audios below before you start with level two!</p>
-
-        <div class="audio">
-            <label for="">
-                <h3>Sesotho - Le Kae?</h3>
-                <audio src="/audio/Lekae.m4a" controls>Sesotho</audio>
-            </label>
-            <label for="">
-                <h3>IsiXhosa - Unjani</h3>
-                <audio src="/audio/Unjani.m4a" controls type="audio/m4a">IsiXhosa</audio>
-            </label>
-            <label for="">
-                <h3>Venda - Vho Vuwa hani</h3>
-                <audio src="/audio/Who.m4a" controls type="audio/m4a">Venda</audio>
-            </label>
-        </div>
-        <div>
-            <span class="counter">0</span>
-             <h3 class="error" style="font-style: normal; color:crimson;"></h3>
-        </div>
-    </div>
-
-    <div class="level levelThree hidden">
-        <h2>Level Three</h2>
-        <p>Hello, please listen to the audios below before you start with level three!</p>
-
-        <div class="audio">
-            <label for="">
-                <h3>Sesotho - Eba Letsatsi le monate</h3>
-                <audio src="/audio/Letsatsi.m4a" controls>Sesotho</audio>
-            </label>
-            <label for="">
-                <h3>IsiXhosa - Ube nemini emnandi</h3>
-                <audio src="/audio/emnandi.m4a" controls type="audio/m4a">IsiXhosa</audio>
-            </label>
-            <label for="">
-                <h3>Venda - Vha vhe de lavhundi</h3>
-                <audio src="/audio/Vhavhe.m4a" controls type="audio/m4a">Venda</audio>
-            </label>
-        </div>
-        <div>
-            <span class="counter">0</span>
-             <h3 class="error" style="font-style: normal; color:crimson; font-weight:bold;"></h3>
-        </div>
-    </div>
-    <div class="level levelFour hidden">
-        <h1>Levels Completed. Well Done!</h1>
-        <form action="/" method="GET">
-            <button type="submit">HOME</button>
-        </form>
-    </div>
-
-
-    <div class="buttons">
-        {{!-- <div>Model Response</div> --}}
-        <div class="navBtns">
-            <button class="hideBtn" type="button" onclick="init()">Start</button>
-            <button class="nextBtn hideBtn">Next</button>
-        </div>
-
-        {{!-- TO DO --- HIDE BUTTON ON 4TH STAGE --}}
-        <div id="label-container">
-
-        </div>
-
-    </div>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands@0.4.0/dist/speech-commands.min.js"></script>
-    <script src="/checklevels.js"></script>
-
-
-</div>
+</html>
