made app mobile friendly

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -94,7 +94,7 @@
 		@media only screen and (max-width: 600px) {
 			* {}
 
-			body {}
+			{{!-- body { background-image: unset; } --}}
 
 			.container {
 				height: 100vh;
