--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ audio {
 .hidden {
 	display: none;
 }
-.hideOnElevelFour {
+.hideOnlevelFour {
 	display: none;
 }
 .model {
@@ -81,12 +81,6 @@ audio {
 }
 
 @media only screen and (max-width: 600px) {
-	.audio {
-		display: block;
-		margin: 0 auto;
-		width: 100%;
-	}
-	.audio audio { width: 100%; display: block; }
 	.model {
 		padding: 0;
 		width: 80%;
@@ -95,6 +89,18 @@ audio {
 		border-radius: 10px;
 		padding: 25px;
 	}
+	.model h2 {
+		font-size: 24px;
+	}
+	.model h3 {
+		font-size: 15px;
+	}
+	.audio {
+		display: block;
+		margin: 0 auto;
+		width: 100%;
+	}
+	.audio audio { width: 100%; display: block; }
 	.navBtns {
 		display: flex;
 		justify-content: space-between;
